--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,7 +99,7 @@ h2 {
   max-width: 88rem !important;
 }
 
-.usa-footer__secondary-section > .grid-container {
+.usa-footer__secondary-section>.grid-container {
   max-width: 88rem !important;
 }
 
@@ -136,7 +136,7 @@ h2 {
 }
 
 @media (min-width: 64em) {
-  .usa-nav__primary > .usa-nav__primary-item > a {
+  .usa-nav__primary>.usa-nav__primary-item>a {
     font-weight: 600 !important;
   }
 }
@@ -257,8 +257,4 @@ h2 {
 .font-public-sans-3xl {
   font-family: 'Public Sans', sans-serif;
   font-size: 45.7px;
-}
-
-.bg-accent-cool-dark {
-  background-color: #1d80a2 !important;
 }
